# pydemo

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh  pyproject.toml  setup.py
cython_ws/demo0/: build.sh  clean_up.sh  hello.pyx  setup.py  test.py
include/: dummy_demo.h
py11/: CMakeLists.txt  Py11Demo.cpp  test.py
py11_learn/: CMakeLists.txt  Py11Learn.cpp  pyproject.toml  setup.py  test.py
python/: CMakeLists.txt  PyDemo.cpp  setup.cfg  setup.py  setup.py.bak  test.py  update_lib.sh
python/src/demo/: __init__.py
python/tests/: test.py
src/: CMakeLists.txt  dummy_demo.cpp  math_dummy2.cpp
