add_library( pydemo SHARED "PyDemo.cpp" )
set_property(TARGET pydemo PROPERTY POSITION_INDEPENDENT_CODE ON)
SET_TARGET_PROPERTIES(pydemo PROPERTIES PREFIX "")
target_link_libraries( pydemo mathdummystatic mathdummydyn)
#target_link_libraries( pydemo boost_python37 ${PYLIB} pthread rt dl)
#target_link_libraries( pydemo boost_python3 ${PYLIB} pthread rt dl)
target_link_libraries( pydemo boost_python38 ${PYLIB} pthread rt dl)